--- a/eql-mcjuan.qmd
+++ b/eql-mcjuan.qmd
@@ -6,15 +6,7 @@ editor: visual
 number-sections: true
 ---
 
----
-title: "Exploring Quarto and Latex"
-author: "Grace Juan"
-format: pdf
-editor: visual
-number-sections: true
-editor_options: 
-  chunk_output_type: console
----
+
 
 # Integration by Substitution
 
@@ -142,21 +134,33 @@ The $\displaystyle\lim_{x \to a} \frac{f(x)}{g(x)}$ is an indeterminate form of 
 ::: {#exm:definition}
 Evaluate the following limits.
 
-1.  $\displaystyle\lim_{x \to 0} \frac{x^2-3x}{2x^2+x}$ $\left(\frac{0}{0}\right)$ **Solution**. $$
+1.  $\displaystyle\lim_{x \to 0} \frac{x^2-3x}{2x^2+x}$ $\left(\frac{0}{0}\right)$ 
+
+**Solution**. 
+$$
     \displaystyle\lim_{x \to 0} \frac{x^2-3x}{2x^2+x}= \displaystyle\lim_{x \to 0} \frac{x(x-3)}{x(2x+1)}=\displaystyle\lim_{x \to 0} \frac{x-3}{2x+1}=-3
     $$
 
-2.  $\displaystyle\lim_{x \to 0} \frac{\sin5x}{\sin3x}$ $\left(\frac{0}{0}\right)$ **Solution**. $$
+2.  $\displaystyle\lim_{x \to 0} \frac{\sin5x}{\sin3x}$ $\left(\frac{0}{0}\right)$ 
+
+**Solution**. 
+$$
     \displaystyle\lim_{x \to 0} \frac{\sin5x}{\sin3x}=\displaystyle\lim_{x \to 0} \left(\frac{\sin5x}{5x}\right)\left(\frac{3x}{\sin3x}\right)\left(\frac{5}{3}\right)=1\cdot1\cdot\frac{5}{3}=\frac{5}{3}
     $$
 
-3.  $\displaystyle\lim_{x \to 2} \frac{x^2+3x-10}{x^2-4x+4}$ $\left(\frac{0}{0}\right)$ **Solution**. $$
+3.  $\displaystyle\lim_{x \to 2} \frac{x^2+3x-10}{x^2-4x+4}$ $\left(\frac{0}{0}\right)$ 
+
+**Solution**.
+$$
     \begin{aligned}
     \displaystyle\lim_{x \to 2} \frac{x^2+3x-10}{x^2-4x+4}&=\displaystyle\lim_{x \to 2}\frac{(x+5)(x-2)}{(x-2)^2}\\&=\displaystyle\lim_{x \to 2}\frac{x+5}{x-2}\\&=-\infty
     \end{aligned}
     $$
 
-4.  $\displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}$ $\left(\frac{+\infty}{-\infty}\right)$ **Solution**. $$
+4.  $\displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}$ $\left(\frac{+\infty}{-\infty}\right)$ 
+
+**Solution**. 
+$$
     \displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}=\displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}\cdot \frac{\frac{1}{x}}{\frac{1}{x}}=\displaystyle\lim_{x \to +\infty}\frac{3-\frac{1}{x}}{\frac{7}{x}-6}=-\frac{1}{2}
     $$
 :::
@@ -178,35 +182,54 @@ $$ provided $\displaystyle\lim_{x \to a}\frac{f'(x)}{g'(x)}$ exists or $\display
 :::
 
 ::: {#exm:remarks}
-**Example** Evaluate the following limits. 1. $\displaystyle\lim_{x \to 0} \frac{x^2-3x}{2x^2+x}$ $\frac{0}{0}$ **Solution**. $$
+**Example** Evaluate the following limits. 1. $\displaystyle\lim_{x \to 0} \frac{x^2-3x}{2x^2+x}$ $\frac{0}{0}$ 
+
+**Solution**.
+$$
 \displaystyle\lim_{x \to 0} \frac{x^2-3x}{2x^2+x}=\displaystyle\lim_{x \to 0} \frac{D_x\left(x^2-3x\right)}{D_y\left(2x^2+x\right)}=\displaystyle\lim_{x \to 0} \frac{2x-3}{4x+1}=-3
 $$
 
-2.  $\displaystyle\lim_{x \to 0} \frac{\sin5x}{\sin3x}$ $\left(\frac{0}{0}\right)$ **Solution**. $$
+2.  $\displaystyle\lim_{x \to 0} \frac{\sin5x}{\sin3x}$ $\left(\frac{0}{0}\right)$ 
+
+**Solution**.
+$$
     \displaystyle\lim_{x \to 0} \frac{\sin5x}{\sin3x}=\displaystyle\lim_{x \to 0} \frac{5\cos5x}{3\cos3x}=\frac{5}{3}
     $$
 
-3.  $\displaystyle\lim_{x \to 2^-} \frac{x^2+3x-10}{x^2-4x+4}$ $\left(\frac{0}{0}\right)$ **Solution**. $$
+3.  $\displaystyle\lim_{x \to 2^-} \frac{x^2+3x-10}{x^2-4x+4}$ $\left(\frac{0}{0}\right)$ 
+
+**Solution**. 
+$$
     \begin{aligned}
     \displaystyle\lim_{x \to 2^-} \frac{x^2+3x-10}{x^2-4x+4}&=\displaystyle\lim_{x \to 2^-}\frac{2x+3}{2x-4}\\&\\&=-\infty
     \end{aligned}
     $$
 
-4.  $\displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}$ $\left(\frac{+\infty}{-\infty}\right)$ **Solution**. $$
+4.  $\displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}$ $\left(\frac{+\infty}{-\infty}\right)$ 
+
+**Solution**. 
+$$
     \displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}=\displaystyle\lim_{x \to +\infty} \frac{3}{-6}=-\frac{1}{2}
     $$
 
-5.  $\displaystyle\lim_{x \to 1} \frac{x^3-3x+2}{1-x+\ln x}$ $\left(\frac{0}{0}\right)$ **Solution**. $$
+5.  $\displaystyle\lim_{x \to 1} \frac{x^3-3x+2}{1-x+\ln x}$ $\left(\frac{0}{0}\right)$
+
+**Solution**. 
+$$
     \begin{aligned}
     \displaystyle\lim_{x \to 1} \frac{x^3-3x+2}{1-x+\ln x}&=\displaystyle\lim_{x \to 1}\frac{3x^2-3}{-1+\frac{1}{x}}\\&=\displaystyle\lim_{x \to 1}\frac{6x}{-\frac{1}{x^2}}\\&=-6
     \end{aligned}
     $$
 
-6.  $\displaystyle\lim_{x \to 0^-}\frac{\csc x}{1-\cot x}$ $\left(\frac{-\infty}{+\infty}\right)$ **Solution**. $$
+6.  $\displaystyle\lim_{x \to 0^-}\frac{\csc x}{1-\cot x}$ $\left(\frac{-\infty}{+\infty}\right)$ 
+
+**Solution**. 
+$$
     \begin{aligned}
     \displaystyle\lim_{x \to 0^-}\frac{\csc x}{1-\cot x}&=\displaystyle\lim_{x \to 0^-}\frac{-\csc x \cot x}{\csc^2 x}\\&=\displaystyle\lim_{x \to 0^-}\frac{-\cot x}{\csc x}\\&=\displaystyle\lim_{x \to 0^-} \frac{\csc^2 x}{-\csc x \cot x}\\&=\displaystyle\lim_{x \to 0^-}\frac{\csc x}{-\cot x}\\&=\displaystyle\lim_{x \to 0^-}\frac{-\cot x}{\csc x}
     \end{aligned}
-    $$ Observe that the expression in the last line above is exactly the same as the expression in the second line. Hence, continued application of L'Hospital's Rule here will just lead to an infinite string of equations and will not help us evaluate the limit. This example should make you realize that L'Hospital's Rule is not always helpful. Sometimes, we just have to use some old-fashioned tricks. For instance, we evaluate this limit by simply manipulating the given expression to obtain a simpler expression:
+    $$
+    Observe that the expression in the last line above is exactly the same as the expression in the second line. Hence, continued application of L'Hospital's Rule here will just lead to an infinite string of equations and will not help us evaluate the limit. This example should make you realize that L'Hospital's Rule is not always helpful. Sometimes, we just have to use some old-fashioned tricks. For instance, we evaluate this limit by simply manipulating the given expression to obtain a simpler expression:
 
 $$
 \begin{aligned}
@@ -220,7 +243,10 @@ $$
 :::
 
 ::: {#exm:5.6.6}
-**Solution** Note that since $x+\sin x \ge x - 1$ for any $x \in R$ and $\displaystyle\lim_{x \to +\infty} {x-1=+\infty}$, then $\displaystyle\lim_{x \to +\infty}{x + \sin x = +\infty}$ as well. Thus, the limit is indeterminate of type $\left(\frac{\infty}{\infty}\right)$.
+
+**Solution** 
+
+Note that since $x+\sin x \ge x - 1$ for any $x \in R$ and $\displaystyle\lim_{x \to +\infty} {x-1=+\infty}$, then $\displaystyle\lim_{x \to +\infty}{x + \sin x = +\infty}$ as well. Thus, the limit is indeterminate of type $\left(\frac{\infty}{\infty}\right)$.
 
 However, $\displaystyle\lim_{x \to +\infty}{\frac{D_x(x+\sin x)}{D_x(x)}=\displaystyle\lim_{x \to +\infty}\frac{1+\cos x}{1}}$ does not exist $\cos x$ does not approach any particular value as $x\to +\infty$. Neither does $1+\cos x$ grow without bound. Thus, L'Hospital's Rule does not apply.
 
@@ -274,19 +300,25 @@ $$ and $\displaystyle\lim_{x\to a}{g(x)=+\infty}$.
 ::: {#exm:example}
 **Example** Evaluate the following limits.
 
-1.  $\displaystyle\lim_{x\to 0^+}{\sin^{-1} (2x) \csc x}$ $(0\cdot +\infty)$ **Solution**
+1.  $\displaystyle\lim_{x\to 0^+}{\sin^{-1} (2x) \csc x}$ $(0\cdot +\infty)$
+
+**Solution**
 
 $$
 \begin{aligned}
 \displaystyle\lim_{x\to 0^+}{\sin^{-1} (2x) \csc x} &=\displaystyle\lim_{x\to 0^+}{\frac{\sin^{-1} (2x)}{\sin x}}\\&=\displaystyle\lim_{x\to 0^+}{\frac{1}{\sqrt{1-4x^2}}}\cdot (2) \\&=\frac{2}{1}\\&=2
 \end{aligned}
-$$ 2. $\displaystyle\lim_{0\to \frac{\pi}{2}^-}{\tan \theta \ln (\sin \theta)}$ $+\infty \cdot 0$ **Solution**
+$$ 2. $\displaystyle\lim_{0\to \frac{\pi}{2}^-}{\tan \theta \ln (\sin \theta)}$ $+\infty \cdot 0$ 
+
+**Solution**
 
 $$
 \begin{aligned}
 \displaystyle\lim_{\theta\to \frac{\pi}{2}^-}{\tan \theta \ln (\sin \theta)}&=\displaystyle\lim_{\theta \to \frac{\pi}{2}^-}{\frac {\ln (\sin \theta)}{\cot \theta}}\\&=\displaystyle\lim_{\theta\to \frac{\pi}{2}^-}{\frac{\left(\frac {1}{\sin \theta}\right)\cos \theta}{-\csc^2 \theta}}\\&=\displaystyle\lim_{\theta\to \frac{\pi}{2}^-}{-\sin \theta\cos \theta}\\&=-1(0)\\&=0
 \end{aligned}
-$$ 3. $\displaystyle\lim_{x\to 1^+}{\left(\frac{x}{x-1}-\frac{1}{\ln x}\right)}$ $\left(\frac{1}{0^+}-\frac{1}{0^+}\right)$ **Solution**
+$$ 3. $\displaystyle\lim_{x\to 1^+}{\left(\frac{x}{x-1}-\frac{1}{\ln x}\right)}$ $\left(\frac{1}{0^+}-\frac{1}{0^+}\right)$
+
+**Solution**
 
 $$
 \begin{aligned}
@@ -322,7 +354,9 @@ $$ and evaluate $\displaystyle\lim_{x\to a}{g(x) \ln [f(x)]}$ first. Then, if
 
 **Example** Evaluate the following limits.
 
-1.  $\displaystyle\lim_{x\to 0^+}{x^{\sin x}}$ $0^0$ **Solution**
+1.  $\displaystyle\lim_{x\to 0^+}{x^{\sin x}}$ $0^0$ 
+
+**Solution**
 
 First, write $x^{\sin x}=e^{\sin x \ln x}$. Evaluate first $\displaystyle\lim_{x\to 0^+}{\sin x \ln x}$.
 
@@ -332,7 +366,9 @@ $$
 \end{aligned}
 $$ Hence, $\displaystyle\lim_{x\to 0^+}{x^{\sin x}}=e^0=1$.
 
-2.  $\displaystyle\lim_{x\to +\infty}{\left(1-\frac{3}{x}\right)^{2x}}$ $1^\infty$ **Solution**
+2.  $\displaystyle\lim_{x\to +\infty}{\left(1-\frac{3}{x}\right)^{2x}}$ $1^\infty$ 
+
+**Solution**
 
 $\left(1-\frac{3}{x}\right)^{2x}=e^{2x\ln \left(1-\frac{3}{x}\right)}$
 
