--- a/eql-mcjuan.qmd
+++ b/eql-mcjuan.qmd
@@ -1,9 +1,8 @@
 ---
-title: "exploring_quarto_and_latex"
-author: "Grace Juan"
+title: "Exploring Quarto and Latex"
+author: "Mary Grace Juan"
 format: pdf
 editor: visual
-number-sections: true
 ---
 
 
@@ -134,33 +133,29 @@ The $\displaystyle\lim_{x \to a} \frac{f(x)}{g(x)}$ is an indeterminate form of 
 ::: {#exm:definition}
 Evaluate the following limits.
 
-1.  $\displaystyle\lim_{x \to 0} \frac{x^2-3x}{2x^2+x}$ $\left(\frac{0}{0}\right)$ 
+1.  $\displaystyle\lim_{x \to 0} \frac{x^2-3x}{2x^2+x}$ $\left(\frac{0}{0}\right)$
 
-**Solution**. 
-$$
+**Solution**. $$
     \displaystyle\lim_{x \to 0} \frac{x^2-3x}{2x^2+x}= \displaystyle\lim_{x \to 0} \frac{x(x-3)}{x(2x+1)}=\displaystyle\lim_{x \to 0} \frac{x-3}{2x+1}=-3
     $$
 
-2.  $\displaystyle\lim_{x \to 0} \frac{\sin5x}{\sin3x}$ $\left(\frac{0}{0}\right)$ 
+2.  $\displaystyle\lim_{x \to 0} \frac{\sin5x}{\sin3x}$ $\left(\frac{0}{0}\right)$
 
-**Solution**. 
-$$
+**Solution**. $$
     \displaystyle\lim_{x \to 0} \frac{\sin5x}{\sin3x}=\displaystyle\lim_{x \to 0} \left(\frac{\sin5x}{5x}\right)\left(\frac{3x}{\sin3x}\right)\left(\frac{5}{3}\right)=1\cdot1\cdot\frac{5}{3}=\frac{5}{3}
     $$
 
-3.  $\displaystyle\lim_{x \to 2} \frac{x^2+3x-10}{x^2-4x+4}$ $\left(\frac{0}{0}\right)$ 
+3.  $\displaystyle\lim_{x \to 2} \frac{x^2+3x-10}{x^2-4x+4}$ $\left(\frac{0}{0}\right)$
 
-**Solution**.
-$$
+**Solution**. $$
     \begin{aligned}
     \displaystyle\lim_{x \to 2} \frac{x^2+3x-10}{x^2-4x+4}&=\displaystyle\lim_{x \to 2}\frac{(x+5)(x-2)}{(x-2)^2}\\&=\displaystyle\lim_{x \to 2}\frac{x+5}{x-2}\\&=-\infty
     \end{aligned}
     $$
 
-4.  $\displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}$ $\left(\frac{+\infty}{-\infty}\right)$ 
+4.  $\displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}$ $\left(\frac{+\infty}{-\infty}\right)$
 
-**Solution**. 
-$$
+**Solution**. $$
     \displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}=\displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}\cdot \frac{\frac{1}{x}}{\frac{1}{x}}=\displaystyle\lim_{x \to +\infty}\frac{3-\frac{1}{x}}{\frac{7}{x}-6}=-\frac{1}{2}
     $$
 :::
@@ -182,54 +177,47 @@ $$ provided $\displaystyle\lim_{x \to a}\frac{f'(x)}{g'(x)}$ exists or $\display
 :::
 
 ::: {#exm:remarks}
-**Example** Evaluate the following limits. 1. $\displaystyle\lim_{x \to 0} \frac{x^2-3x}{2x^2+x}$ $\frac{0}{0}$ 
+**Example** Evaluate the following limits. 1. $\displaystyle\lim_{x \to 0} \frac{x^2-3x}{2x^2+x}$ $\frac{0}{0}$
 
-**Solution**.
-$$
+**Solution**. $$
 \displaystyle\lim_{x \to 0} \frac{x^2-3x}{2x^2+x}=\displaystyle\lim_{x \to 0} \frac{D_x\left(x^2-3x\right)}{D_y\left(2x^2+x\right)}=\displaystyle\lim_{x \to 0} \frac{2x-3}{4x+1}=-3
 $$
 
-2.  $\displaystyle\lim_{x \to 0} \frac{\sin5x}{\sin3x}$ $\left(\frac{0}{0}\right)$ 
+2.  $\displaystyle\lim_{x \to 0} \frac{\sin5x}{\sin3x}$ $\left(\frac{0}{0}\right)$
 
-**Solution**.
-$$
+**Solution**. $$
     \displaystyle\lim_{x \to 0} \frac{\sin5x}{\sin3x}=\displaystyle\lim_{x \to 0} \frac{5\cos5x}{3\cos3x}=\frac{5}{3}
     $$
 
-3.  $\displaystyle\lim_{x \to 2^-} \frac{x^2+3x-10}{x^2-4x+4}$ $\left(\frac{0}{0}\right)$ 
+3.  $\displaystyle\lim_{x \to 2^-} \frac{x^2+3x-10}{x^2-4x+4}$ $\left(\frac{0}{0}\right)$
 
-**Solution**. 
-$$
+**Solution**. $$
     \begin{aligned}
     \displaystyle\lim_{x \to 2^-} \frac{x^2+3x-10}{x^2-4x+4}&=\displaystyle\lim_{x \to 2^-}\frac{2x+3}{2x-4}\\&\\&=-\infty
     \end{aligned}
     $$
 
-4.  $\displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}$ $\left(\frac{+\infty}{-\infty}\right)$ 
+4.  $\displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}$ $\left(\frac{+\infty}{-\infty}\right)$
 
-**Solution**. 
-$$
+**Solution**. $$
     \displaystyle\lim_{x \to +\infty}\frac{3x-1}{7-6x}=\displaystyle\lim_{x \to +\infty} \frac{3}{-6}=-\frac{1}{2}
     $$
 
 5.  $\displaystyle\lim_{x \to 1} \frac{x^3-3x+2}{1-x+\ln x}$ $\left(\frac{0}{0}\right)$
 
-**Solution**. 
-$$
+**Solution**. $$
     \begin{aligned}
     \displaystyle\lim_{x \to 1} \frac{x^3-3x+2}{1-x+\ln x}&=\displaystyle\lim_{x \to 1}\frac{3x^2-3}{-1+\frac{1}{x}}\\&=\displaystyle\lim_{x \to 1}\frac{6x}{-\frac{1}{x^2}}\\&=-6
     \end{aligned}
     $$
 
-6.  $\displaystyle\lim_{x \to 0^-}\frac{\csc x}{1-\cot x}$ $\left(\frac{-\infty}{+\infty}\right)$ 
+6.  $\displaystyle\lim_{x \to 0^-}\frac{\csc x}{1-\cot x}$ $\left(\frac{-\infty}{+\infty}\right)$
 
-**Solution**. 
-$$
+**Solution**. $$
     \begin{aligned}
     \displaystyle\lim_{x \to 0^-}\frac{\csc x}{1-\cot x}&=\displaystyle\lim_{x \to 0^-}\frac{-\csc x \cot x}{\csc^2 x}\\&=\displaystyle\lim_{x \to 0^-}\frac{-\cot x}{\csc x}\\&=\displaystyle\lim_{x \to 0^-} \frac{\csc^2 x}{-\csc x \cot x}\\&=\displaystyle\lim_{x \to 0^-}\frac{\csc x}{-\cot x}\\&=\displaystyle\lim_{x \to 0^-}\frac{-\cot x}{\csc x}
     \end{aligned}
-    $$
-    Observe that the expression in the last line above is exactly the same as the expression in the second line. Hence, continued application of L'Hospital's Rule here will just lead to an infinite string of equations and will not help us evaluate the limit. This example should make you realize that L'Hospital's Rule is not always helpful. Sometimes, we just have to use some old-fashioned tricks. For instance, we evaluate this limit by simply manipulating the given expression to obtain a simpler expression:
+    $$ Observe that the expression in the last line above is exactly the same as the expression in the second line. Hence, continued application of L'Hospital's Rule here will just lead to an infinite string of equations and will not help us evaluate the limit. This example should make you realize that L'Hospital's Rule is not always helpful. Sometimes, we just have to use some old-fashioned tricks. For instance, we evaluate this limit by simply manipulating the given expression to obtain a simpler expression:
 
 $$
 \begin{aligned}
@@ -243,8 +231,7 @@ $$
 :::
 
 ::: {#exm:5.6.6}
-
-**Solution** 
+**Solution**
 
 Note that since $x+\sin x \ge x - 1$ for any $x \in R$ and $\displaystyle\lim_{x \to +\infty} {x-1=+\infty}$, then $\displaystyle\lim_{x \to +\infty}{x + \sin x = +\infty}$ as well. Thus, the limit is indeterminate of type $\left(\frac{\infty}{\infty}\right)$.
 
@@ -308,7 +295,7 @@ $$
 \begin{aligned}
 \displaystyle\lim_{x\to 0^+}{\sin^{-1} (2x) \csc x} &=\displaystyle\lim_{x\to 0^+}{\frac{\sin^{-1} (2x)}{\sin x}}\\&=\displaystyle\lim_{x\to 0^+}{\frac{1}{\sqrt{1-4x^2}}}\cdot (2) \\&=\frac{2}{1}\\&=2
 \end{aligned}
-$$ 2. $\displaystyle\lim_{0\to \frac{\pi}{2}^-}{\tan \theta \ln (\sin \theta)}$ $+\infty \cdot 0$ 
+$$ 2. $\displaystyle\lim_{0\to \frac{\pi}{2}^-}{\tan \theta \ln (\sin \theta)}$ $+\infty \cdot 0$
 
 **Solution**
 
@@ -354,7 +341,7 @@ $$ and evaluate $\displaystyle\lim_{x\to a}{g(x) \ln [f(x)]}$ first. Then, if
 
 **Example** Evaluate the following limits.
 
-1.  $\displaystyle\lim_{x\to 0^+}{x^{\sin x}}$ $0^0$ 
+1.  $\displaystyle\lim_{x\to 0^+}{x^{\sin x}}$ $0^0$
 
 **Solution**
 
@@ -366,7 +353,7 @@ $$
 \end{aligned}
 $$ Hence, $\displaystyle\lim_{x\to 0^+}{x^{\sin x}}=e^0=1$.
 
-2.  $\displaystyle\lim_{x\to +\infty}{\left(1-\frac{3}{x}\right)^{2x}}$ $1^\infty$ 
+2.  $\displaystyle\lim_{x\to +\infty}{\left(1-\frac{3}{x}\right)^{2x}}$ $1^\infty$
 
 **Solution**
 
@@ -380,6 +367,5 @@ $$
 &=\displaystyle\lim_{x\to +\infty}{\frac{-6}{1-\frac{3}{x}}}\\
 &=-6.
 \end{aligned}
-$$
- Hence, $\displaystyle\lim_{x\to +\infty}{\left(1-\frac{3}{x}\right)^{2x}}=e^{-6}$.
+$$ Hence, $\displaystyle\lim_{x\to +\infty}{\left(1-\frac{3}{x}\right)^{2x}}=e^{-6}$.
 :::
